<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:inputType="text"
        android:id="@+id/et_commodity_code"
        android:hint="@string/commodity_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:layout_below="@id/et_commodity_code"
        android:id="@+id/et_category"
        android:hint="@string/loai_hang_hoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_below="@id/et_category"
        android:inputType="number"
        android:id="@+id/et_number"
        android:hint="@string/numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_below="@id/et_number"
        android:id="@+id/et_price"
        android:hint="@string/don_gia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:importantForAutofill="no" />
    <EditText
        android:inputType="number"
        android:hint="@string/gia_tien"
        android:id="@+id/et_money"
        android:layout_below="@id/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_create"
        android:textAllCaps="false"
        android:text="@string/create"
        android:layout_centerInParent="true"
        android:layout_below="@id/et_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_show"
        android:textAllCaps="false"
        android:text="@string/show"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>